--- a/output.css
+++ b/output.css
@@ -52,6 +52,7 @@
     --default-mono-font-family: var(--font-mono);
     --font-MonserratExtraBold: 'MonserratExtraBold', sans-serif;
     --font-MonserratRegular: 'MonserratRegular', sans-serif;
+    --font-MonserratThin: 'MonserratThin', sans-serif;
     --font-MonserratLight: 'MonserratLight', sans-serif;
     --font-CalSans: 'CalSans', sans-serif;
     --font-Boldonse: 'Boldonse', sans-serif;
@@ -632,6 +633,9 @@
   }
   .font-MonserratRegular {
     font-family: var(--font-MonserratRegular);
+  }
+  .font-MonserratThin {
+    font-family: var(--font-MonserratThin);
   }
   .text-2xl {
     font-size: var(--text-2xl);
