--- a/output.css
+++ b/output.css
@@ -7,7 +7,8 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-green-400: oklch(79.2% 0.209 151.711);
+    --color-fuchsia-700: oklch(51.8% 0.253 323.949);
+    --color-pink-400: oklch(71.8% 0.202 349.761);
     --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-gray-800: oklch(27.8% 0.033 256.848);
     --color-black: #000;
@@ -52,7 +53,6 @@
     --default-mono-font-family: var(--font-mono);
     --font-MonserratExtraBold: 'MonserratExtraBold', sans-serif;
     --font-MonserratRegular: 'MonserratRegular', sans-serif;
-    --font-MonserratThin: 'MonserratThin', sans-serif;
     --font-MonserratLight: 'MonserratLight', sans-serif;
     --font-CalSans: 'CalSans', sans-serif;
     --font-Boldonse: 'Boldonse', sans-serif;
@@ -273,9 +273,6 @@
   .h-14 {
     height: calc(var(--spacing) * 14);
   }
-  .h-\[1¿200px\] {
-    height: 1¿200px;
-  }
   .h-\[45px\] {
     height: 45px;
   }
@@ -291,14 +288,11 @@
   .h-\[190px\] {
     height: 190px;
   }
-  .h-\[200px\] {
-    height: 200px;
-  }
   .h-\[231px\] {
     height: 231px;
   }
-  .h-\[300px\] {
-    height: 300px;
+  .h-\[350px\] {
+    height: 350px;
   }
   .h-\[400px\] {
     height: 400px;
@@ -309,23 +303,11 @@
   .h-\[490px\] {
     height: 490px;
   }
-  .h-\[500\] {
-    height: 500;
-  }
-  .h-\[500px\] {
-    height: 500px;
-  }
   .h-\[655px\] {
     height: 655px;
   }
   .h-\[680px\] {
     height: 680px;
-  }
-  .h-\[fi\] {
-    height: fi;
-  }
-  .h-auto {
-    height: auto;
   }
   .h-full {
     height: 100%;
@@ -339,17 +321,11 @@
   .w-14 {
     width: calc(var(--spacing) * 14);
   }
-  .w-\[100px\] {
-    width: 100px;
-  }
   .w-\[130px\] {
     width: 130px;
   }
   .w-\[150px\] {
     width: 150px;
-  }
-  .w-\[200px\] {
-    width: 200px;
   }
   .w-\[223px\] {
     width: 223px;
@@ -357,32 +333,11 @@
   .w-\[285px\] {
     width: 285px;
   }
-  .w-\[300\] {
-    width: 300;
-  }
-  .w-\[300px\] {
-    width: 300px;
-  }
   .w-\[396px\] {
     width: 396px;
   }
-  .w-\[400px\] {
-    width: 400px;
-  }
-  .w-\[450px\] {
-    width: 450px;
-  }
   .w-\[500px\] {
     width: 500px;
-  }
-  .w-\[600px\] {
-    width: 600px;
-  }
-  .w-\[fit\] {
-    width: fit;
-  }
-  .w-fit {
-    width: fit-content;
   }
   .w-full {
     width: 100%;
@@ -559,11 +514,55 @@
   .bg-white {
     background-color: var(--color-white);
   }
+  .bg-radial {
+    --tw-gradient-position: in oklab;
+    background-image: radial-gradient(var(--tw-gradient-stops));
+  }
+  .from-\[\#c9ffea\] {
+    --tw-gradient-from: #c9ffea;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-\[\#edfaf5\] {
+    --tw-gradient-from: #edfaf5;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-\[\#ffffff\] {
+    --tw-gradient-from: #ffffff;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-\[c9ffea\] {
+    --tw-gradient-from: c9ffea;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-\[pink-400\] {
+    --tw-gradient-from: pink-400;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-pink-400 {
+    --tw-gradient-from: var(--color-pink-400);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-40\% {
+    --tw-gradient-from-position: 40%;
+  }
+  .to-\[\#c9ffea\] {
+    --tw-gradient-to: #c9ffea;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-\[c9ffea\] {
+    --tw-gradient-to: c9ffea;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-\[fuchsia-700\] {
+    --tw-gradient-to: fuchsia-700;
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-fuchsia-700 {
+    --tw-gradient-to: var(--color-fuchsia-700);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
   .object-contain {
     object-fit: contain;
-  }
-  .object-cover {
-    object-fit: cover;
   }
   .p-1 {
     padding: calc(var(--spacing) * 1);
@@ -634,9 +633,6 @@
   .font-MonserratRegular {
     font-family: var(--font-MonserratRegular);
   }
-  .font-MonserratThin {
-    font-family: var(--font-MonserratThin);
-  }
   .text-2xl {
     font-size: var(--text-2xl);
     line-height: var(--tw-leading, var(--text-2xl--line-height));
@@ -659,6 +655,9 @@
   }
   .text-\[0\.8em\] {
     font-size: 0.8em;
+  }
+  .text-\[1\.2em\] {
+    font-size: 1.2em;
   }
   .text-\[1em\] {
     font-size: 1em;
@@ -925,11 +924,6 @@
       height: 220px;
     }
   }
-  .lg\:h-full {
-    @media (width >= 64rem) {
-      height: 100%;
-    }
-  }
   .lg\:w-\[375px\] {
     @media (width >= 64rem) {
       width: 375px;
@@ -950,11 +944,6 @@
       width: 1000px;
     }
   }
-  .lg\:w-full {
-    @media (width >= 64rem) {
-      width: 100%;
-    }
-  }
   .lg\:w-lvh {
     @media (width >= 64rem) {
       width: 100lvh;
@@ -973,11 +962,6 @@
   .lg\:justify-evenly {
     @media (width >= 64rem) {
       justify-content: space-evenly;
-    }
-  }
-  .lg\:rounded-\[64px\] {
-    @media (width >= 64rem) {
-      border-radius: 64px;
     }
   }
   .lg\:bg-gray-800 {
@@ -1026,11 +1010,6 @@
   .lg\:text-\[0\.9em\] {
     @media (width >= 64rem) {
       font-size: 0.9em;
-    }
-  }
-  .lg\:text-\[1\.2em\] {
-    @media (width >= 64rem) {
-      font-size: 1.2em;
     }
   }
   .lg\:text-\[1\.3em\] {
@@ -1122,6 +1101,48 @@
   syntax: "*";
   inherits: false;
   initial-value: solid;
+}
+@property --tw-gradient-position {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-via {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-to {
+  syntax: "<color>";
+  inherits: false;
+  initial-value: #0000;
+}
+@property --tw-gradient-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-via-stops {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-gradient-from-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 0%;
+}
+@property --tw-gradient-via-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 50%;
+}
+@property --tw-gradient-to-position {
+  syntax: "<length-percentage>";
+  inherits: false;
+  initial-value: 100%;
 }
 @property --tw-font-weight {
   syntax: "*";
@@ -1235,6 +1256,15 @@
       --tw-space-y-reverse: 0;
       --tw-space-x-reverse: 0;
       --tw-border-style: solid;
+      --tw-gradient-position: initial;
+      --tw-gradient-from: #0000;
+      --tw-gradient-via: #0000;
+      --tw-gradient-to: #0000;
+      --tw-gradient-stops: initial;
+      --tw-gradient-via-stops: initial;
+      --tw-gradient-from-position: 0%;
+      --tw-gradient-via-position: 50%;
+      --tw-gradient-to-position: 100%;
       --tw-font-weight: initial;
       --tw-tracking: initial;
       --tw-shadow: 0 0 #0000;
